--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-hover": "^1.4.0",
     "react-rectangle": "^1.3.3",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
